recommit with new changes

--- a/index.html
+++ b/index.html
@@ -247,10 +247,11 @@ $( document ).ready(function() {
 	<!--Introduction part-->
 	<section class="row intro">
 	<article class="span4">
-	Kodaiasifcabs tours and Travels
+	<img src="img/beri-jam-kodaikanal.jpg" alt="Kodaikanal taxi">
 	</article>
-	<article class="span9"><h2>Welcome to Asif Cabs</h2>
-	Lorem Ipsum Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.
+	<article class="span9"><h2>Welcome to Asif Cabs | Kodaikanal Tours & Travels</h2><p>
+  We Operating Cabs and all types of vehicles in <strong>Kodaikanal</strong> for the past 15 years. The main objective of Our Travel Agency is to provide a safe and affordable journey to all people comes to kodaikanal.We arrange tours all over India. We have happy customers in all states they come to Us with a plan We completely Execute their plan never miss anything from their Wishlsit. Also We make their trip pleasant by adding some additional places to visit maost of the people wonder if the place exist in kodaikanal. The Wildlife in Kodaikanal and safari into the forest to see Bison and Cheetah.
+	The Tour Packages We offer always most benificial for the Tourist with Low Cost Hotel Booking.</p>
 	</article>
 	</section>
 
