--- a/index.html
+++ b/index.html
@@ -246,10 +246,7 @@ $( document ).ready(function() {
 
 	<!--Introduction part-->
 	<section class="row intro">
-	<article class="span4">
-	<img src="img/beri-jam-kodaikanal.jpg" alt="Kodaikanal taxi">
-	</article>
-	<article class="span9"><h2>Welcome to Asif Cabs | Kodaikanal Tours & Travels</h2><p>
+	<article class="span13"><h2 style="color:#f22f2f;">Welcome to Asif Cabs | Kodaikanal Tours & Travels</h2><p>
   We Operating Cabs and all types of vehicles in <strong>Kodaikanal</strong> for the past 15 years. The main objective of Our Travel Agency is to provide a safe and affordable journey to all people comes to kodaikanal.We arrange tours all over India. We have happy customers in all states they come to Us with a plan We completely Execute their plan never miss anything from their Wishlsit. Also We make their trip pleasant by adding some additional places to visit maost of the people wonder if the place exist in kodaikanal. The Wildlife in Kodaikanal and safari into the forest to see Bison and Cheetah.
 	The Tour Packages We offer always most benificial for the Tourist with Low Cost Hotel Booking.</p>
 	</article>
